<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"> <!-- Add this line -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".ui.MoodFormFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/emotion"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/form_emotion"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/social_situation"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/form_situation"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/trigger"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/form_trigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:gravity="top|start"
            android:hint="@string/trigger"
            android:inputType="textMultiLine"
            android:minHeight="100dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray" />

        <com.github.angads25.toggle.widget.LabeledSwitch
            android:id="@+id/form_public_switch"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            app:colorBorder="#7f7f7f"
            app:colorOff="@color/white"
            app:colorOn="#7f7f7f"
            app:textOff="Private"
            app:textOn="Public" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/location"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/form_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:clickable="true"
                android:textColor="@color/black"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:autofillHints=""
                android:hint="@string/search_location"
                android:padding="8dp"/>

            <ImageView
                android:id="@+id/form_location_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_close_24"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="8dp"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="or"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/form_current_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:drawableLeft="@drawable/ic_baseline_my_location_24"
            android:text="@string/use_my_current_location"
            android:textColor="#000000"
            android:textSize="16sp"
            app:strokeWidth="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"/> <!-- Add margin and center -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"> <!-- Add gravity -->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:drawableLeft="@drawable/ic_baseline_add_24"
                android:text="@string/add_image"
                android:textColor="#000000"
                android:textSize="16sp"
                app:strokeWidth="1dp"/>

            <TextView
                android:id="@+id/image_error_msg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#ff0000"
                android:gravity="center"
                android:visibility="gone"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/mood_image_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:visibility="gone"
                android:adjustViewBounds="true"
                android:contentDescription="@string/mood_image_preview" />

            <ImageButton
                android:id="@+id/remove_preview"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|top"
                android:visibility="gone"
                android:src="@drawable/ic_baseline_close_24"
                android:background="@android:color/transparent"
                android:contentDescription="@string/remove_image"
                app:tint="#ff0000" />
        </FrameLayout>

    </LinearLayout>
</ScrollView>