<?xml version="1.0" encoding="utf-8"?>
<ImageButton
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_mood_button"
    android:layout_width="32dp"
    android:layout_height="32dp"
    android:scaleType="fitXY"
    android:background="@null"
    android:src="@drawable/ic_baseline_add_24"/>