...
    <string name="fear">Fear</string>
    <string name="happiness">Happiness</string>
    <string name="sadness">Sadness</string>
    <string name="shame">Shame</string>
    <string name="surprise">Surprise</string>
    <string name="emotional_state_dropdown_hint">Select Emotional State…</string>
    <string name="no_emotional_state_error_msg">Emotional State is required</string>
    <string name="emoji_anger">😡</string>
    <string name="emoji_confusion">😕</string>
    <string name="emoji_disgust">🤢</string>
    <string name="emoji_fear">😱</string>
    <string name="emoji_happiness">😊</string>
    <string name="emoji_sadness">☹️</string>
...
    <string name="image_size_exceeded">Image exceeds the size limit.</string>
    <string name="image_invalid">Invalid image. Please try again</string>
    <string name="mood_disgusted">Disgusted</string>
    <string name="mood_anger">Angry</string>
    <string name="mood_confusion">Confused</string>
    <string name="mood_fear">Scared</string>
    <string name="mood_happiness">Happy</string>
    <string name="mood_sadness">Sad</string>
    <string name="mood_shame">Ashamed</string>
    <string name="mood_surprise">Surprised</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="trigger_too_many_chars">Trigger must be under %d characters</string>
    <string name="empty_username_error">Username cannot be empty</string>
    <string name="empty_password_error">Password cannot be empty</string>
    <string name="too_short_password_error">Password should be at least 6 characters</string>
    <string name="username_exists_error">Username already taken</string>
    <string name="filter_moods_by_time_title">Filter by time:</string>
...
