<?xml version="1.0" encoding="utf-8"?>
<!-- Three-dot edit/delete menu icon-->
<ImageView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mood_menu_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top|end"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="4dp"
    android:src="@drawable/ic_baseline_more_vert_24" />